# documentator

./: .gitignore  README.md  design.org  documentator.cabal  shell.nix  stack-8.0.1.yaml  stack.yaml
app/: Main.hs
src/: Documentator.hs
src/Documentator/: DataDeclAnalysis.hs  Descriptors.hs  DevelopmentHelpers.hs  EntryPoint.hs  Parser.hs  TypeAnalysis.hs  Types.hs  Utils.hs
src/Report/: Main.hs
