name:                documentator
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/meditans/documentator#readme
license:             GPL-3
license-file:        LICENSE
author:              Carlo Nucera
maintainer:          meditans@gmail.com
copyright:           2015 Carlo Nucera
category:            tutorial
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:  src
  exposed-modules: Documentator.Parser
                 , Documentator.Types
                 , Documentator.Utils
                 , Documentator.Descriptors
                 , Documentator.TypeAnalysis
                 , Documentator.DataDeclAnalysis
  other-modules: Paths_documentator
  build-depends:       base >= 4.7 && < 5
                     , preprocessor
                     , haskell-src-exts
                     , lens
                     , text
                     , containers
                     , lucid
  default-language:    Haskell2010

executable documentator-exe
  hs-source-dirs:      src/Report
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory
                     , documentator
                     , haskell-src-exts
                     , lens
                     , text
                     , lucid
                     , preprocessor
                     , open-browser
                     , optparse-generic
  default-language:    Haskell2010

test-suite documentator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , documentator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/meditans/documentator
